--- a/aboutUs.css
+++ b/aboutUs.css
@@ -28,6 +28,32 @@ header{
 }
 
 
+.aboutUsBack{
+    width: 100%;
+}
+.aboutUsBack-img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    object-position: top;
+    filter: brightness(.5);
+}
+.about{
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: var(--White);
+    font-size: var(--Heading-1);
+    font-family: 'montserrat', cursive;
+}
+.about span{
+    color: var(--Primary);
+}
+
+
+
+
 .aboutUs-container{
     width: 80%;
     margin: auto;
